--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!-- invisible part/ display:none -->
         <section class="weather-part">
             <!-- img at the top -->
-            <img src="" alt="Weather Icon">
+            <img src="#" alt="Weather Icon">
             <div class="temp">
                 <!-- tahta -->
                 <!-- 19°C -->
